z-index bug fixed

--- a/SMM/src/styles.css
+++ b/SMM/src/styles.css
@@ -18,3 +18,19 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+#map1 > div.leaflet-control-container > div.leaflet-top.leaflet-left > div{
+  z-index: 200 !important;
+}
+#map1 > div.leaflet-control-container > div.leaflet-top.leaflet-left{
+  z-index: 200 !important;
+}
+#map1 > div.leaflet-pane.leaflet-map-pane{
+  z-index: 100 !important;
+}
+#map1 > div.leaflet-control-container > div.leaflet-bottom.leaflet-right > div{
+  z-index: 0 !important;
+}
+#map1 > div.leaflet-control-container > div.leaflet-bottom.leaflet-right{
+  z-index: 0 !important;
+}
